--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "version": "0.1.0",
   "author": "Stuart Mackenzie",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.3",
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
-    "gatsby-plugin-google-analytics": "^4.9.0",
+    "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-manifest": "^4.9.0",
     "gatsby-plugin-mdx": "^3.9.0",
@@ -34,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "sass": "^1.49.9"
   },
   "devDependencies": {
